// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-infra-planner - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan, generate, and deploy Azure infrastructure from workload requirements or repository context. Produces a structured JSON infrastructure plan, generates Bicep or Terraform IaC, and executes deployment.
USE FOR: create infrastructure plan, plan Azure infrastructure, generate Bicep templates, generate Terraform for Azure, deploy infrastructure, provision Azure resources, multi-environment infrastructure, workload planning, infrastructure as code, what Azure resources do I need, set up dev staging production.
DO NOT USE FOR: application scaffolding or code generation (use azure-prepare), listing existing resources (use azure-resource-lookup), optimizing costs (use azure-cost-optimization).
",
  "extractedKeywords": [
    "application",
    "azure",
    "azure-cost-optimization",
    "azure-prepare",
    "azure-resource-lookup",
    "bicep",
    "code",
    "context",
    "costs",
    "create",
    "deploy",
    "deployment",
    "executes",
    "existing",
    "from",
    "generate",
    "generates",
    "generation",
    "infrastructure",
    "json",
    "listing",
    "mcp",
    "multi-environment",
    "need",
    "optimizing",
    "plan",
    "planner",
    "planning",
    "produces",
    "production",
    "provision",
    "repository",
    "requirements",
    "resources",
    "scaffolding",
    "staging",
    "structured",
    "templates",
    "terraform",
    "validation",
    "what",
    "workload",
  ],
  "name": "azure-infra-planner",
}
`;

exports[`azure-infra-planner - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "application",
  "azure",
  "azure-cost-optimization",
  "azure-prepare",
  "azure-resource-lookup",
  "bicep",
  "code",
  "context",
  "costs",
  "create",
  "deploy",
  "deployment",
  "executes",
  "existing",
  "from",
  "generate",
  "generates",
  "generation",
  "infrastructure",
  "json",
  "listing",
  "mcp",
  "multi-environment",
  "need",
  "optimizing",
  "plan",
  "planner",
  "planning",
  "produces",
  "production",
  "provision",
  "repository",
  "requirements",
  "resources",
  "scaffolding",
  "staging",
  "structured",
  "templates",
  "terraform",
  "validation",
  "what",
  "workload",
]
`;
